--- a/api/manifest.yaml
+++ b/api/manifest.yaml
@@ -14,15 +14,15 @@ models:
         readOnly: false
         editorModeId: ace/mode/yaml
         editorModeURI: mode-yaml.js
-        editorThemeId: ace/theme/xcode
+        editorThemeId: ace/theme/yaml
         editorThemeURI: theme-yaml.js
         syntaxCheck: true
       - id: json
         readOnly: false
         editorModeId: ace/mode/json
         editorModeURI: mode-json.js
-        editorThemeId: ace/theme/eclipse
-        editorThemeURI: theme-json.js
+        editorThemeId: ace/theme/yaml
+        editorThemeURI: theme-yaml.js
         syntaxCheck: true
     operations: []
 #      - id: generateOAI
@@ -38,15 +38,15 @@ models:
         readOnly: false
         editorModeId: ace/mode/yaml
         editorModeURI: mode-yaml.js
-        editorThemeId: ace/theme/xcode
+        editorThemeId: ace/theme/yaml
         editorThemeURI: theme-yaml.js
         syntaxCheck: true
       - id: json
         readOnly: false
         editorModeId: ace/mode/json
         editorModeURI: mode-json.js
-        editorThemeId: ace/theme/eclipse
-        editorThemeURI: theme-json.js
+        editorThemeId: ace/theme/yaml
+        editorThemeURI: theme-yaml.js
         syntaxCheck: true
     operations: []
 #      - id: generateOAI
@@ -62,15 +62,15 @@ models:
         readOnly: false
         editorModeId: ace/mode/yaml
         editorModeURI: mode-yaml.js
-        editorThemeId: ace/theme/xcode
+        editorThemeId: ace/theme/yaml
         editorThemeURI: theme-yaml.js
         syntaxCheck: true
       - id: json
         readOnly: false
         editorModeId: ace/mode/json
         editorModeURI: mode-json.js
-        editorThemeId: ace/theme/eclipse
-        editorThemeURI: theme-json.js
+        editorThemeId: ace/theme/yaml
+        editorThemeURI: theme-yaml.js
         syntaxCheck: true
     operations:
       - id: generateGovernify
@@ -87,15 +87,15 @@ models:
         readOnly: false
         editorModeId: ace/mode/yaml
         editorModeURI: mode-yaml.js
-        editorThemeId: ace/theme/xcode
+        editorThemeId: ace/theme/yaml
         editorThemeURI: theme-yaml.js
         syntaxCheck: true
       - id: json
         readOnly: false
         editorModeId: ace/mode/json
         editorModeURI: mode-json.js
-        editorThemeId: ace/theme/eclipse
-        editorThemeURI: theme-json.js
+        editorThemeId: ace/theme/yaml
+        editorThemeURI: theme-yaml.js
         syntaxCheck: true
     operations:
       - id: generateGovernify
