--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "governify-agreement-manager": "0.0.1",
     "js-yaml": "^3.3.0",
     "jsonlint": "^1.6.2",
+    "request": "^2.74.0",
     "swagger-tools": "0.9.*"
   }
 }
