change update operation type

--- a/api/manifest.yaml
+++ b/api/manifest.yaml
@@ -52,7 +52,11 @@ models:
       - id: update
         name: Update
         description: Delete previous version of this document if exists and load it in Registry.
-        type: simple
+        type: requireFile
+        config:
+          modalTitle: Update contract
+          modalDescription: Select a config file.
+          filter: cfg
 #      - id: generateOAI
 #        name: Generate OAI
 #        description: Generate OAI model.
