--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "governify-agreement-manager": "0.0.8",
-    "governify-agreement-analyzer": "~0.3.0",
-    "governify-csp-tools": "~0.3.0",
+    "governify-agreement-analyzer": "*",
+    "governify-csp-tools": "*",
     "js-yaml": "^3.3.0",
     "jsonlint": "^1.6.2",
     "request": "^2.74.0",
