Dockerized this module with node onbuild image. Enabled 'generateGovernify' operation for .ag files. Added 'model.id' value as a parameter of check syntax operation. Added support for sample agreement which disables check consistency operation Refactored Agreement Analyzer initialization and CSP  response.

--- a/api/manifest.yaml
+++ b/api/manifest.yaml
@@ -137,10 +137,10 @@ models:
         editorThemeId: ace/theme/json
         editorThemeURI: theme-json.js
         syntaxCheck: true
-    operations:
-      - id: generateGovernify
-        name: Generate Governify
-        description: Generate Governify model.
-        type: createFile
-        config:
-          ext: ag
+    operations: []
+      # - id: generateGovernify
+      #   name: Generate Governify
+      #   description: Generate Governify model.
+      #   type: createFile
+      #   config:
+      #     ext: ag
