--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "agreements"
   ],
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "private": true,
   "dependencies": {
     "body-parser": "^1.15.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "governify-agreement-analyzer": "^0.5.5",
     "governify-agreement-manager": "0.0.8",
-    "governify-agreement-analyzer": "*",
-    "governify-csp-tools": "*",
+    "governify-csp-tools": "^0.3.6",
     "js-yaml": "^3.3.0",
     "jsonlint": "^1.6.2",
     "request": "^2.74.0",
