--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "body-parser": "^1.15.1",
-    "express": "^4.13.4",
-    "governify-agreement-analyzer": "^0.5.7",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "governify-agreement-analyzer": "^0.6.2",
     "governify-agreement-manager": "0.0.8",
     "governify-csp-tools": "^0.3.6",
-    "js-yaml": "^3.9.0",
+    "https": "^1.0.0",
+    "ipaddr.js": "^1.5.3",
+    "js-yaml": "^3.10.0",
     "jsonlint": "^1.6.2",
-    "request": "^2.74.0",
+    "request": "^2.83.0",
     "swagger-tools": "0.9.*"
   }
 }
