--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "js-yaml": "^3.10.0",
     "jsonlint": "^1.6.2",
     "request": "^2.83.0",
-    "swagger-tools": "0.9.*"
+    "swagger-tools": "^0.10.4"
   }
 }
